@@ -10,7 +10,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclCompExpr.c,v 1.14.2.31 2007/10/16 03:42:35 dgp Exp $
+ * RCS: @(#) $Id: tclCompExpr.c,v 1.14.2.32 2007/10/17 14:39:41 dgp Exp $
  */
 
 #include "tclInt.h"
@@ -751,10 +751,11 @@ ParseExpr(
 				    && (lastStart[2] >= '0')
 				    && (lastStart[2] <= '9')) {
 				const char *end = lastStart + 2;
+				Tcl_Obj* copy;
 				while (isdigit(*end)) {
 				    end++;
 				}
-				Tcl_Obj *copy = Tcl_NewStringObj(lastStart,
+				copy = Tcl_NewStringObj(lastStart,
 					end - lastStart);
 				if (TclCheckBadOctal(NULL,
 					Tcl_GetString(copy))) {
